parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> INSTRUCTIONS
Rule 2     INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION
Rule 3     INSTRUCTIONS -> INSTRUCTION
Rule 4     INSTRUCTION -> STATEMENT ;
Rule 5     INSTRUCTION -> IF_STATEMENT
Rule 6     INSTRUCTION -> WHILE_STATEMENT
Rule 7     INSTRUCTION -> FOR_STATEMENT
Rule 8     STATEMENT -> ASSIGNMENT
Rule 9     STATEMENT -> KEYWORD
Rule 10    ASSIGNMENT -> LEFT_ASSIGNMENT ASSIGNMENT_OPERATOR EXPRESSION
Rule 11    LEFT_ASSIGNMENT -> ID
Rule 12    LEFT_ASSIGNMENT -> ACCESS
Rule 13    ACCESS -> ID [ SEQUENCE ]
Rule 14    SEQUENCE -> SEQUENCE , EXPRESSION
Rule 15    SEQUENCE -> EXPRESSION
Rule 16    VALUE -> FLOAT
Rule 17    VALUE -> INT
Rule 18    VALUE -> STRING
Rule 19    VALUE -> ID
Rule 20    VALUE -> MATRIX
Rule 21    VALUE -> ACCESS
Rule 22    MATRIX -> [ ROWS ]
Rule 23    ROWS -> ROWS ; SEQUENCE
Rule 24    ROWS -> SEQUENCE
Rule 25    EXPRESSION -> VALUE
Rule 26    EXPRESSION -> - EXPRESSION
Rule 27    EXPRESSION -> EXPRESSION '
Rule 28    EXPRESSION -> ( EXPRESSION )
Rule 29    EXPRESSION -> EXPRESSION MATHEMATICAL_OPERATOR EXPRESSION
Rule 30    EXPRESSION -> FUNCTION ( EXPRESSION )
Rule 31    KEYWORD -> PRINT SEQUENCE
Rule 32    KEYWORD -> BREAK
Rule 33    KEYWORD -> CONTINUE
Rule 34    KEYWORD -> RETURN EXPRESSION
Rule 35    CONDITION -> EXPRESSION COMPARISION_OPERATOR EXPRESSION
Rule 36    BODY -> { INSTRUCTIONS }
Rule 37    BODY -> INSTRUCTION
Rule 38    IF_STATEMENT -> IF ( CONDITION ) BODY
Rule 39    IF_STATEMENT -> IF ( CONDITION ) BODY ELSE BODY
Rule 40    WHILE_STATEMENT -> WHILE ( CONDITION ) BODY
Rule 41    FOR_STATEMENT -> FOR ID = RANGE BODY
Rule 42    RANGE -> EXPRESSION : EXPRESSION
Rule 43    RANGE -> EXPRESSION : EXPRESSION : EXPRESSION
Rule 44    ASSIGNMENT_OPERATOR -> =
Rule 45    ASSIGNMENT_OPERATOR -> PLUS_ASSIGN
Rule 46    ASSIGNMENT_OPERATOR -> MINUS_ASSIGN
Rule 47    ASSIGNMENT_OPERATOR -> TIMES_ASSIGN
Rule 48    ASSIGNMENT_OPERATOR -> DIVIDE_ASSIGN
Rule 49    COMPARISION_OPERATOR -> <
Rule 50    COMPARISION_OPERATOR -> >
Rule 51    COMPARISION_OPERATOR -> EQ
Rule 52    COMPARISION_OPERATOR -> NEQ
Rule 53    COMPARISION_OPERATOR -> GE
Rule 54    COMPARISION_OPERATOR -> LE
Rule 55    MATHEMATICAL_OPERATOR -> +
Rule 56    MATHEMATICAL_OPERATOR -> -
Rule 57    MATHEMATICAL_OPERATOR -> *
Rule 58    MATHEMATICAL_OPERATOR -> /
Rule 59    MATHEMATICAL_OPERATOR -> M_PLUS
Rule 60    MATHEMATICAL_OPERATOR -> M_MINUS
Rule 61    MATHEMATICAL_OPERATOR -> M_TIMES
Rule 62    MATHEMATICAL_OPERATOR -> M_DIVIDE
Rule 63    FUNCTION -> EYE
Rule 64    FUNCTION -> ZEROS
Rule 65    FUNCTION -> ONES

Terminals, with rules where they appear

'                    : 27
(                    : 28 30 38 39 40
)                    : 28 30 38 39 40
*                    : 57
+                    : 55
,                    : 14
-                    : 26 56
/                    : 58
:                    : 42 43 43
;                    : 4 23
<                    : 49
=                    : 41 44
>                    : 50
BREAK                : 32
CONTINUE             : 33
DIVIDE_ASSIGN        : 48
ELSE                 : 39
EQ                   : 51
EYE                  : 63
FLOAT                : 16
FOR                  : 41
GE                   : 53
ID                   : 11 13 19 41
IF                   : 38 39
INT                  : 17
LE                   : 54
MINUS_ASSIGN         : 46
M_DIVIDE             : 62
M_MINUS              : 60
M_PLUS               : 59
M_TIMES              : 61
NEQ                  : 52
ONES                 : 65
PLUS_ASSIGN          : 45
PRINT                : 31
RETURN               : 34
STRING               : 18
TIMES_ASSIGN         : 47
WHILE                : 40
ZEROS                : 64
[                    : 13 22
]                    : 13 22
error                : 
{                    : 36
}                    : 36

Nonterminals, with rules where they appear

ACCESS               : 12 21
ASSIGNMENT           : 8
ASSIGNMENT_OPERATOR  : 10
BODY                 : 38 39 39 40 41
COMPARISION_OPERATOR : 35
CONDITION            : 38 39 40
EXPRESSION           : 10 14 15 26 27 28 29 29 30 34 35 35 42 42 43 43 43
FOR_STATEMENT        : 7
FUNCTION             : 30
IF_STATEMENT         : 5
INSTRUCTION          : 2 3 37
INSTRUCTIONS         : 1 2 36
KEYWORD              : 9
LEFT_ASSIGNMENT      : 10
MATHEMATICAL_OPERATOR : 29
MATRIX               : 20
RANGE                : 41
ROWS                 : 22 23
SEQUENCE             : 13 14 23 24 31
STATEMENT            : 4
VALUE                : 25
WHILE_STATEMENT      : 6
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . INSTRUCTIONS
    (2) INSTRUCTIONS -> . INSTRUCTIONS INSTRUCTION
    (3) INSTRUCTIONS -> . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT ;
    (5) INSTRUCTION -> . IF_STATEMENT
    (6) INSTRUCTION -> . WHILE_STATEMENT
    (7) INSTRUCTION -> . FOR_STATEMENT
    (8) STATEMENT -> . ASSIGNMENT
    (9) STATEMENT -> . KEYWORD
    (38) IF_STATEMENT -> . IF ( CONDITION ) BODY
    (39) IF_STATEMENT -> . IF ( CONDITION ) BODY ELSE BODY
    (40) WHILE_STATEMENT -> . WHILE ( CONDITION ) BODY
    (41) FOR_STATEMENT -> . FOR ID = RANGE BODY
    (10) ASSIGNMENT -> . LEFT_ASSIGNMENT ASSIGNMENT_OPERATOR EXPRESSION
    (31) KEYWORD -> . PRINT SEQUENCE
    (32) KEYWORD -> . BREAK
    (33) KEYWORD -> . CONTINUE
    (34) KEYWORD -> . RETURN EXPRESSION
    (11) LEFT_ASSIGNMENT -> . ID
    (12) LEFT_ASSIGNMENT -> . ACCESS
    (13) ACCESS -> . ID [ SEQUENCE ]

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    PRINT           shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18
    ID              shift and go to state 13

    start                          shift and go to state 1
    INSTRUCTIONS                   shift and go to state 2
    INSTRUCTION                    shift and go to state 3
    STATEMENT                      shift and go to state 4
    IF_STATEMENT                   shift and go to state 5
    WHILE_STATEMENT                shift and go to state 6
    FOR_STATEMENT                  shift and go to state 7
    ASSIGNMENT                     shift and go to state 8
    KEYWORD                        shift and go to state 9
    LEFT_ASSIGNMENT                shift and go to state 14
    ACCESS                         shift and go to state 19

state 1

    (0) S' -> start .



state 2

    (1) start -> INSTRUCTIONS .
    (2) INSTRUCTIONS -> INSTRUCTIONS . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT ;
    (5) INSTRUCTION -> . IF_STATEMENT
    (6) INSTRUCTION -> . WHILE_STATEMENT
    (7) INSTRUCTION -> . FOR_STATEMENT
    (8) STATEMENT -> . ASSIGNMENT
    (9) STATEMENT -> . KEYWORD
    (38) IF_STATEMENT -> . IF ( CONDITION ) BODY
    (39) IF_STATEMENT -> . IF ( CONDITION ) BODY ELSE BODY
    (40) WHILE_STATEMENT -> . WHILE ( CONDITION ) BODY
    (41) FOR_STATEMENT -> . FOR ID = RANGE BODY
    (10) ASSIGNMENT -> . LEFT_ASSIGNMENT ASSIGNMENT_OPERATOR EXPRESSION
    (31) KEYWORD -> . PRINT SEQUENCE
    (32) KEYWORD -> . BREAK
    (33) KEYWORD -> . CONTINUE
    (34) KEYWORD -> . RETURN EXPRESSION
    (11) LEFT_ASSIGNMENT -> . ID
    (12) LEFT_ASSIGNMENT -> . ACCESS
    (13) ACCESS -> . ID [ SEQUENCE ]

    $end            reduce using rule 1 (start -> INSTRUCTIONS .)
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    PRINT           shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18
    ID              shift and go to state 13

    INSTRUCTION                    shift and go to state 20
    STATEMENT                      shift and go to state 4
    IF_STATEMENT                   shift and go to state 5
    WHILE_STATEMENT                shift and go to state 6
    FOR_STATEMENT                  shift and go to state 7
    ASSIGNMENT                     shift and go to state 8
    KEYWORD                        shift and go to state 9
    LEFT_ASSIGNMENT                shift and go to state 14
    ACCESS                         shift and go to state 19

state 3

    (3) INSTRUCTIONS -> INSTRUCTION .

    IF              reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    WHILE           reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    FOR             reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    PRINT           reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    BREAK           reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    CONTINUE        reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    RETURN          reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    ID              reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    $end            reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)
    }               reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION .)


state 4

    (4) INSTRUCTION -> STATEMENT . ;

    ;               shift and go to state 21


state 5

    (5) INSTRUCTION -> IF_STATEMENT .

    IF              reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    WHILE           reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    FOR             reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    PRINT           reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    BREAK           reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    CONTINUE        reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    RETURN          reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    ID              reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    $end            reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    ELSE            reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    }               reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)


state 6

    (6) INSTRUCTION -> WHILE_STATEMENT .

    IF              reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    WHILE           reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    FOR             reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    PRINT           reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    BREAK           reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    CONTINUE        reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    RETURN          reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    ID              reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    $end            reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    ELSE            reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    }               reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)


state 7

    (7) INSTRUCTION -> FOR_STATEMENT .

    IF              reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    WHILE           reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    FOR             reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    PRINT           reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    BREAK           reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    CONTINUE        reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    RETURN          reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    ID              reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    $end            reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    ELSE            reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    }               reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)


state 8

    (8) STATEMENT -> ASSIGNMENT .

    ;               reduce using rule 8 (STATEMENT -> ASSIGNMENT .)


state 9

    (9) STATEMENT -> KEYWORD .

    ;               reduce using rule 9 (STATEMENT -> KEYWORD .)


state 10

    (38) IF_STATEMENT -> IF . ( CONDITION ) BODY
    (39) IF_STATEMENT -> IF . ( CONDITION ) BODY ELSE BODY

    (               shift and go to state 22


state 11

    (40) WHILE_STATEMENT -> WHILE . ( CONDITION ) BODY

    (               shift and go to state 23


state 12

    (41) FOR_STATEMENT -> FOR . ID = RANGE BODY

    ID              shift and go to state 24


state 13

    (11) LEFT_ASSIGNMENT -> ID .
    (13) ACCESS -> ID . [ SEQUENCE ]

    =               reduce using rule 11 (LEFT_ASSIGNMENT -> ID .)
    PLUS_ASSIGN     reduce using rule 11 (LEFT_ASSIGNMENT -> ID .)
    MINUS_ASSIGN    reduce using rule 11 (LEFT_ASSIGNMENT -> ID .)
    TIMES_ASSIGN    reduce using rule 11 (LEFT_ASSIGNMENT -> ID .)
    DIVIDE_ASSIGN   reduce using rule 11 (LEFT_ASSIGNMENT -> ID .)
    [               shift and go to state 25


state 14

    (10) ASSIGNMENT -> LEFT_ASSIGNMENT . ASSIGNMENT_OPERATOR EXPRESSION
    (44) ASSIGNMENT_OPERATOR -> . =
    (45) ASSIGNMENT_OPERATOR -> . PLUS_ASSIGN
    (46) ASSIGNMENT_OPERATOR -> . MINUS_ASSIGN
    (47) ASSIGNMENT_OPERATOR -> . TIMES_ASSIGN
    (48) ASSIGNMENT_OPERATOR -> . DIVIDE_ASSIGN

    =               shift and go to state 27
    PLUS_ASSIGN     shift and go to state 28
    MINUS_ASSIGN    shift and go to state 29
    TIMES_ASSIGN    shift and go to state 30
    DIVIDE_ASSIGN   shift and go to state 31

    ASSIGNMENT_OPERATOR            shift and go to state 26

state 15

    (31) KEYWORD -> PRINT . SEQUENCE
    (14) SEQUENCE -> . SEQUENCE , EXPRESSION
    (15) SEQUENCE -> . EXPRESSION
    (25) EXPRESSION -> . VALUE
    (26) EXPRESSION -> . - EXPRESSION
    (27) EXPRESSION -> . EXPRESSION '
    (28) EXPRESSION -> . ( EXPRESSION )
    (29) EXPRESSION -> . EXPRESSION MATHEMATICAL_OPERATOR EXPRESSION
    (30) EXPRESSION -> . FUNCTION ( EXPRESSION )
    (16) VALUE -> . FLOAT
    (17) VALUE -> . INT
    (18) VALUE -> . STRING
    (19) VALUE -> . ID
    (20) VALUE -> . MATRIX
    (21) VALUE -> . ACCESS
    (63) FUNCTION -> . EYE
    (64) FUNCTION -> . ZEROS
    (65) FUNCTION -> . ONES
    (22) MATRIX -> . [ ROWS ]
    (13) ACCESS -> . ID [ SEQUENCE ]

    -               shift and go to state 35
    (               shift and go to state 36
    FLOAT           shift and go to state 38
    INT             shift and go to state 39
    STRING          shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    [               shift and go to state 47

    SEQUENCE                       shift and go to state 32
    EXPRESSION                     shift and go to state 33
    VALUE                          shift and go to state 34
    FUNCTION                       shift and go to state 37
    MATRIX                         shift and go to state 42
    ACCESS                         shift and go to state 43

state 16

    (32) KEYWORD -> BREAK .

    ;               reduce using rule 32 (KEYWORD -> BREAK .)


state 17

    (33) KEYWORD -> CONTINUE .

    ;               reduce using rule 33 (KEYWORD -> CONTINUE .)


state 18

    (34) KEYWORD -> RETURN . EXPRESSION
    (25) EXPRESSION -> . VALUE
    (26) EXPRESSION -> . - EXPRESSION
    (27) EXPRESSION -> . EXPRESSION '
    (28) EXPRESSION -> . ( EXPRESSION )
    (29) EXPRESSION -> . EXPRESSION MATHEMATICAL_OPERATOR EXPRESSION
    (30) EXPRESSION -> . FUNCTION ( EXPRESSION )
    (16) VALUE -> . FLOAT
    (17) VALUE -> . INT
    (18) VALUE -> . STRING
    (19) VALUE -> . ID
    (20) VALUE -> . MATRIX
    (21) VALUE -> . ACCESS
    (63) FUNCTION -> . EYE
    (64) FUNCTION -> . ZEROS
    (65) FUNCTION -> . ONES
    (22) MATRIX -> . [ ROWS ]
    (13) ACCESS -> . ID [ SEQUENCE ]

    -               shift and go to state 35
    (               shift and go to state 36
    FLOAT           shift and go to state 38
    INT             shift and go to state 39
    STRING          shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    [               shift and go to state 47

    EXPRESSION                     shift and go to state 48
    VALUE                          shift and go to state 34
    FUNCTION                       shift and go to state 37
    MATRIX                         shift and go to state 42
    ACCESS                         shift and go to state 43

state 19

    (12) LEFT_ASSIGNMENT -> ACCESS .

    =               reduce using rule 12 (LEFT_ASSIGNMENT -> ACCESS .)
    PLUS_ASSIGN     reduce using rule 12 (LEFT_ASSIGNMENT -> ACCESS .)
    MINUS_ASSIGN    reduce using rule 12 (LEFT_ASSIGNMENT -> ACCESS .)
    TIMES_ASSIGN    reduce using rule 12 (LEFT_ASSIGNMENT -> ACCESS .)
    DIVIDE_ASSIGN   reduce using rule 12 (LEFT_ASSIGNMENT -> ACCESS .)


state 20

    (2) INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .

    IF              reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    WHILE           reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    FOR             reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    PRINT           reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    BREAK           reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    CONTINUE        reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    RETURN          reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    ID              reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    $end            reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)
    }               reduce using rule 2 (INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION .)


state 21

    (4) INSTRUCTION -> STATEMENT ; .

    IF              reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    WHILE           reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    FOR             reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    PRINT           reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    BREAK           reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    CONTINUE        reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    RETURN          reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    ID              reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    $end            reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    ELSE            reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)
    }               reduce using rule 4 (INSTRUCTION -> STATEMENT ; .)


state 22

    (38) IF_STATEMENT -> IF ( . CONDITION ) BODY
    (39) IF_STATEMENT -> IF ( . CONDITION ) BODY ELSE BODY
    (35) CONDITION -> . EXPRESSION COMPARISION_OPERATOR EXPRESSION
    (25) EXPRESSION -> . VALUE
    (26) EXPRESSION -> . - EXPRESSION
    (27) EXPRESSION -> . EXPRESSION '
    (28) EXPRESSION -> . ( EXPRESSION )
    (29) EXPRESSION -> . EXPRESSION MATHEMATICAL_OPERATOR EXPRESSION
    (30) EXPRESSION -> . FUNCTION ( EXPRESSION )
    (16) VALUE -> . FLOAT
    (17) VALUE -> . INT
    (18) VALUE -> . STRING
    (19) VALUE -> . ID
    (20) VALUE -> . MATRIX
    (21) VALUE -> . ACCESS
    (63) FUNCTION -> . EYE
    (64) FUNCTION -> . ZEROS
    (65) FUNCTION -> . ONES
    (22) MATRIX -> . [ ROWS ]
    (13) ACCESS -> . ID [ SEQUENCE ]

    -               shift and go to state 35
    (               shift and go to state 36
    FLOAT           shift and go to state 38
    INT             shift and go to state 39
    STRING          shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    [               shift and go to state 47

    CONDITION                      shift and go to state 49
    EXPRESSION                     shift and go to state 50
    VALUE                          shift and go to state 34
    FUNCTION                       shift and go to state 37
    MATRIX                         shift and go to state 42
    ACCESS                         shift and go to state 43

state 23
